What the hell, is it another bug in QTreeWidget or is it about me being dumb?

--- a/trunk/ui/MainWindow.ui
+++ b/trunk/ui/MainWindow.ui
@@ -91,7 +91,7 @@
      <attribute name="title" >
       <string>Package Information</string>
      </attribute>
-     <widget class="QTextEdit" name="textEdit" >
+     <widget class="QTextEdit" name="pkgInfo" >
       <property name="enabled" >
        <bool>true</bool>
       </property>
