--- a/trunk/ui/dbUpdateDialog.ui
+++ b/trunk/ui/dbUpdateDialog.ui
@@ -66,7 +66,7 @@
        <number>24</number>
       </property>
       <property name="format" >
-       <string>Checking for updates in %s...</string>
+       <string>%p%</string>
       </property>
      </widget>
     </item>
