Add Splitters to the MainWindow

--- a/trunk/ui/MainWindow.ui
+++ b/trunk/ui/MainWindow.ui
@@ -5,8 +5,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>784</width>
-    <height>542</height>
+    <width>794</width>
+    <height>484</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -14,103 +14,124 @@
   </property>
   <widget class="QWidget" name="centralwidget" >
    <layout class="QGridLayout" >
-    <item rowspan="2" row="0" column="0" >
-     <widget class="QListWidget" name="repoList" >
-      <property name="sizePolicy" >
-       <sizepolicy vsizetype="Minimum" hsizetype="Preferred" >
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
+    <item row="0" column="0" >
+     <widget class="QSplitter" name="splitter_2" >
+      <property name="orientation" >
+       <enum>Qt::Horizontal</enum>
       </property>
-     </widget>
-    </item>
-    <item row="0" column="1" >
-     <widget class="QTreeWidget" name="pkgsViewWG" >
-      <property name="indentation" >
-       <number>0</number>
-      </property>
-      <property name="rootIsDecorated" >
+      <property name="childrenCollapsible" >
        <bool>true</bool>
       </property>
-      <property name="itemsExpandable" >
-       <bool>false</bool>
-      </property>
-      <property name="sortingEnabled" >
-       <bool>true</bool>
-      </property>
-      <column>
-       <property name="text" >
-        <string>Status</string>
+      <widget class="QListWidget" name="repoList" >
+       <property name="sizePolicy" >
+        <sizepolicy vsizetype="Maximum" hsizetype="Maximum" >
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
        </property>
-      </column>
-      <column>
-       <property name="text" >
-        <string>Action</string>
+      </widget>
+      <widget class="QSplitter" name="splitter" >
+       <property name="orientation" >
+        <enum>Qt::Vertical</enum>
        </property>
-      </column>
-      <column>
-       <property name="text" >
-        <string>Name</string>
-       </property>
-      </column>
-      <column>
-       <property name="text" >
-        <string>Version</string>
-       </property>
-      </column>
-      <column>
-       <property name="text" >
-        <string>Description</string>
-       </property>
-      </column>
-      <column>
-       <property name="text" >
-        <string>Repo</string>
-       </property>
-      </column>
-     </widget>
-    </item>
-    <item row="1" column="1" >
-     <widget class="QTabWidget" name="PkgInfos" >
-      <property name="currentIndex" >
-       <number>0</number>
-      </property>
-      <widget class="QWidget" name="tab" >
-       <attribute name="title" >
-        <string>Package Information</string>
-       </attribute>
-       <layout class="QGridLayout" >
-        <item row="0" column="0" >
-         <widget class="QTextEdit" name="pkgInfo" >
-          <property name="enabled" >
-           <bool>true</bool>
-          </property>
-          <property name="acceptDrops" >
-           <bool>false</bool>
-          </property>
-          <property name="undoRedoEnabled" >
-           <bool>false</bool>
-          </property>
-          <property name="readOnly" >
-           <bool>true</bool>
-          </property>
-          <property name="html" >
-           <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
+       <widget class="QTreeWidget" name="pkgsViewWG" >
+        <property name="sizePolicy" >
+         <sizepolicy vsizetype="Minimum" hsizetype="Minimum" >
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="indentation" >
+         <number>0</number>
+        </property>
+        <property name="rootIsDecorated" >
+         <bool>true</bool>
+        </property>
+        <property name="itemsExpandable" >
+         <bool>false</bool>
+        </property>
+        <property name="sortingEnabled" >
+         <bool>true</bool>
+        </property>
+        <column>
+         <property name="text" >
+          <string>Status</string>
+         </property>
+        </column>
+        <column>
+         <property name="text" >
+          <string>Action</string>
+         </property>
+        </column>
+        <column>
+         <property name="text" >
+          <string>Name</string>
+         </property>
+        </column>
+        <column>
+         <property name="text" >
+          <string>Version</string>
+         </property>
+        </column>
+        <column>
+         <property name="text" >
+          <string>Description</string>
+         </property>
+        </column>
+        <column>
+         <property name="text" >
+          <string>Repo</string>
+         </property>
+        </column>
+       </widget>
+       <widget class="QTabWidget" name="PkgInfos" >
+        <property name="sizePolicy" >
+         <sizepolicy vsizetype="Preferred" hsizetype="Minimum" >
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="currentIndex" >
+         <number>0</number>
+        </property>
+        <widget class="QWidget" name="tab" >
+         <attribute name="title" >
+          <string>Package Information</string>
+         </attribute>
+         <layout class="QGridLayout" >
+          <item row="0" column="0" >
+           <widget class="QTextEdit" name="pkgInfo" >
+            <property name="enabled" >
+             <bool>true</bool>
+            </property>
+            <property name="acceptDrops" >
+             <bool>false</bool>
+            </property>
+            <property name="undoRedoEnabled" >
+             <bool>false</bool>
+            </property>
+            <property name="readOnly" >
+             <bool>true</bool>
+            </property>
+            <property name="html" >
+             <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
 p, li { white-space: pre-wrap; }
 &lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:10pt; font-weight:400; font-style:normal;">
 &lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;span style=" font-size:12pt; font-weight:600;">Welcome in qtPacman&lt;/span>&lt;/p>&lt;/body>&lt;/html></string>
-          </property>
-          <property name="acceptRichText" >
-           <bool>false</bool>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </widget>
-      <widget class="QWidget" name="tab_2" >
-       <attribute name="title" >
-        <string>Files</string>
-       </attribute>
+            </property>
+            <property name="acceptRichText" >
+             <bool>false</bool>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+        <widget class="QWidget" name="tab_2" >
+         <attribute name="title" >
+          <string>Files</string>
+         </attribute>
+        </widget>
+       </widget>
       </widget>
      </widget>
     </item>
@@ -121,7 +142,7 @@ p, li { white-space: pre-wrap; }
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>784</width>
+     <width>794</width>
      <height>31</height>
     </rect>
    </property>
