--- a/trunk/ui/transactionDialog.ui
+++ b/trunk/ui/transactionDialog.ui
@@ -6,7 +6,7 @@
     <x>0</x>
     <y>0</y>
     <width>331</width>
-    <height>234</height>
+    <height>270</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -119,14 +119,14 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="0" >
+   <item row="3" column="0" >
     <widget class="QProgressBar" name="progressBar" >
      <property name="value" >
       <number>24</number>
      </property>
     </widget>
    </item>
-   <item row="3" column="0" >
+   <item row="4" column="0" >
     <layout class="QHBoxLayout" >
      <item>
       <widget class="QPushButton" name="showDetails" >
@@ -156,6 +156,22 @@
       </widget>
      </item>
     </layout>
+   </item>
+   <item row="2" column="0" >
+    <widget class="QLabel" name="actionDetail" >
+     <property name="sizePolicy" >
+      <sizepolicy vsizetype="Maximum" hsizetype="Preferred" >
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text" >
+      <string>blablablalalalalalalalalalal</string>
+     </property>
+     <property name="alignment" >
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
