--- a/trunk/ui/transactionDialog.ui
+++ b/trunk/ui/transactionDialog.ui
@@ -23,28 +23,28 @@
       </widget>
      </item>
      <item row="0" column="3" >
-      <widget class="QLabel" name="label" >
+      <widget class="QLabel" name="checkTransaction" >
        <property name="text" >
-        <string>Checking transaction validity</string>
+        <string>Check transaction validity</string>
        </property>
       </widget>
      </item>
      <item row="1" column="3" >
-      <widget class="QLabel" name="label_3" >
+      <widget class="QLabel" name="downloadPackages" >
        <property name="text" >
-        <string>Downloading Packages</string>
+        <string>Download Packages</string>
        </property>
       </widget>
      </item>
      <item row="2" column="3" >
-      <widget class="QLabel" name="label_4" >
+      <widget class="QLabel" name="processingQueue" >
        <property name="text" >
         <string>Process queue</string>
        </property>
       </widget>
      </item>
      <item row="3" column="3" >
-      <widget class="QLabel" name="label_5" >
+      <widget class="QLabel" name="cleaningUp" >
        <property name="text" >
         <string>Cleanup</string>
        </property>
