--- a/trunk/ui/qtpacman.qrc
+++ b/trunk/ui/qtpacman.qrc
@@ -1,6 +1,9 @@
 <RCC>
     <qresource prefix="/Icons" >
         <file>icons/application-exit.png</file>
+        <file>icons/bookmark-new-list.png</file>
+        <file>icons/dialog-ok-apply.png</file>
+        <file>icons/document-open-folder.png</file>
         <file>icons/edit-delete.png</file>
         <file>icons/edit-redo.png</file>
         <file>icons/list-add.png</file>
