--- a/trunk/ui/qtpacman.qrc
+++ b/trunk/ui/qtpacman.qrc
@@ -6,8 +6,11 @@
         <file>icons/document-open-folder.png</file>
         <file>icons/edit-delete.png</file>
         <file>icons/edit-redo.png</file>
+        <file>icons/help-about.png</file>
         <file>icons/list-add.png</file>
         <file>icons/list-remove.png</file>
+        <file>icons/network-server-database.png</file>
+        <file>icons/preferences-system.png</file>
         <file>icons/view-refresh.png</file>
     </qresource>
 </RCC>
