--- a/trunk/ui/qtpacman.qrc
+++ b/trunk/ui/qtpacman.qrc
@@ -4,6 +4,7 @@
         <file>icons/bookmark-new-list.png</file>
         <file>icons/dialog-ok-apply.png</file>
         <file>icons/document-open-folder.png</file>
+        <file>icons/document-open.png</file>
         <file>icons/edit-delete.png</file>
         <file>icons/edit-redo.png</file>
         <file>icons/help-about.png</file>
