--- a/trunk/ui/MainWindow.ui
+++ b/trunk/ui/MainWindow.ui
@@ -232,6 +232,16 @@
              </property>
             </widget>
            </item>
+           <item>
+            <widget class="QPushButton" name="cancelButton" >
+             <property name="text" >
+              <string>Cancel action</string>
+             </property>
+             <property name="icon" >
+              <iconset resource="qtpacman.qrc" >:/Icons/icons/dialog-cancel.png</iconset>
+             </property>
+            </widget>
+           </item>
           </layout>
          </item>
          <item>
