--- a/trunk/ui/qtpacman.qrc
+++ b/trunk/ui/qtpacman.qrc
@@ -2,6 +2,7 @@
     <qresource prefix="/Icons" >
         <file>icons/application-exit.png</file>
         <file>icons/bookmark-new-list.png</file>
+        <file>icons/dialog-cancel.png</file>
         <file>icons/dialog-ok-apply.png</file>
         <file>icons/document-open-folder.png</file>
         <file>icons/document-open.png</file>
