New depencies tab for PkgInfos

--- a/trunk/ui/MainWindow.ui
+++ b/trunk/ui/MainWindow.ui
@@ -253,7 +253,7 @@
             </sizepolicy>
            </property>
            <property name="currentIndex" >
-            <number>0</number>
+            <number>2</number>
            </property>
            <widget class="QWidget" name="tab" >
             <attribute name="title" >
@@ -297,6 +297,27 @@ p, li { white-space: pre-wrap; }
             <attribute name="icon" >
              <iconset resource="qtpacman.qrc" >:/Icons/icons/document-open-folder.png</iconset>
             </attribute>
+            <layout class="QGridLayout" >
+             <item row="0" column="0" >
+              <widget class="QTreeWidget" name="filesWidget" >
+               <column>
+                <property name="text" >
+                 <string>1</string>
+                </property>
+               </column>
+              </widget>
+             </item>
+            </layout>
+           </widget>
+           <widget class="QWidget" name="dependenciesTab" >
+            <attribute name="title" >
+             <string>Dependencies</string>
+            </attribute>
+            <layout class="QGridLayout" >
+             <item row="0" column="0" >
+              <widget class="QListWidget" name="dependenciesWidget" />
+             </item>
+            </layout>
            </widget>
           </widget>
          </item>
